infra/k8s/istio/service-3/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: service-3-allow-jwt
  namespace: service-3
spec:
  selector:
    matchLabels:
      app: service-3
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"
    when:
    - key: request.auth.principal
      values:
      - "cluster.local/*"
